--- a/httpd.conf
+++ b/httpd.conf
@@ -1,3 +1,4 @@
+port 80           # server port
 cpu_limit 4       # maximum CPU count to use (for non-blocking servers)
 thread_limit 256  # maximum simultaneous connections (for blocking servers)
-document_root /var/www/html
+document_root    /var/www/html
